Fix 2 08-07-16 Fix sobre overflow de blog

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2269,8 +2269,3 @@ section.event{
 /*BOOTSTRAP LG*/
 @media (min-width: 1200px){
 }
-
-
-.blog{
-	overflow: hidden;
-}
